# video-search

./: .env.example  .gitignore  .justfile  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: api_reference.md  blog.md  project_overview.md  search_module.md  subtitle_module.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Toast.tsx  VideoCard.tsx  VideoClipCard.tsx
frontend/src/hooks/: useAnalyzeContent.ts  useSearchVideos.ts
frontend/src/pages/: SearchPage.tsx  SessionPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: format.ts
src/youtube_search/: __init__.py  client.py  models.py  openai_client.py  service.py  session.py  subtitle.py  utils.py  web.py
tests/: test_openai.py  test_search.py  test_service.py  test_subtitle.py
